# box2d-file-format

./: CMakeLists.txt
docs/: data_structure.md
dotBox2d/: CMakeLists.txt  db2_chunk.h  db2_container.h  db2_data_structure.cpp  db2_data_structure.h  db2_decoder.cpp  db2_decoder.h  db2_hardware_difference.cpp  db2_hardware_difference.h  db2_parser.cpp  db2_parser.h  db2_settings.h  db2_structure_reflector.cpp  db2_structure_reflector.h
src/: CMakeLists.txt  db2_chunk.h  db2_container.h  db2_cson.cpp  db2_cson.h  db2_data_structure.cpp  db2_data_structure.h  db2_decoder.cpp  db2_decoder.h  db2_dynarray.h  db2_hardware_difference.cpp  db2_hardware_difference.h  db2_key.h  db2_reflector.h  db2_settings.h  db2_structure.cpp  db2_structure.h  db2_structure_reflector.cpp  db2_structure_reflector.h  dotBox2d.cpp  dotBox2d.h
src/common/: db2_hardware_difference.cpp  db2_hardware_difference.h  db2_nullval.cpp  db2_nullval.h  db2_reflector.cpp  db2_reflector.h  db2_settings.h
src/containers/: db2_chunk.h  db2_cson.h  db2_dynarray.h  db2_tree.h
src/data/: db2_key.h  db2_structure.h
src/decoders/: db2_decoder.cpp  db2_transcoder.cpp  db2_transcoder.h
src/events/: db2_contact_listener.cpp  db2_contact_listener.h  db2_offstep_listener.cpp  db2_offstep_listener.h
src/script/: db2_expression.cpp  db2_expression.h  db2_function.cpp  db2_function.h  db2_math.h  db2_object.cpp  db2_object.h  db2_script.h  db2_scriptdef.h  db2_tensor.h
test/: CMakeLists.txt  test.cpp
